# go-cities.json

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  cities.go  cities_test.go  go.mod  iter.go  iter_test.go
.github/: dependabot.yml
.github/workflows/: go.yml  release-python.yml  release.yml  rust.yml  test-python.yml
citiespy/: Cargo.toml  Makefile  citiespy.pyi  pyproject.toml  requirements_dev.txt  setup.py
citiespy/src/: lib.rs
citiespy/tests/: test_basic.py
src/: lib.rs
