[package]
name = "cities-json"
version = "0.6.9"
edition = "2021"
license = "Unlicense"
description = "Get cities"
homepage = "https://github.com/ringsaturn/go-cities.json"
documentation = "https://docs.rs/cities-json"
repository = "https://github.com/ringsaturn/go-cities.json"
readme = "README.md"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
lazy_static = "1.5.0"
rand = "0.9.0"
