[package]
name = "cities-json"
version = "0.6.13"
edition = "2024"
license = "Unlicense"
description = "Get cities"
homepage = "https://github.com/ringsaturn/go-cities.json"
documentation = "https://docs.rs/cities-json"
repository = "https://github.com/ringsaturn/go-cities.json"
readme = "README.md"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
lazy_static = "1.5.0"
rand = "0.9.2"
