[package]
name = "citiespy"
version = "0.6.13"
edition = "2024"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "citiespy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.26.0", features = ["extension-module", "generate-import-lib", "abi3-py310"]}
cities-json = { path = "../" }
