[project]
name = "citiespy"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
description = "Cities."
dynamic = ["version"]

[dependency-groups]
dev = [
    "maturin==1.8.2",
    "pytest==8.3.4",
    "pytest-benchmark==5.1.0",
    "pytest-cov==6.0.0",
    "ruff==0.9.9",
]

[build-system]
requires = ["maturin>=1.8.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
cargo-extra-args = "--features python-extension"

[project.urls]
"Source Code" = "https://github.com/ringsaturn/go-cities.json"
Issues = "https://github.com/ringsaturn/go-cities.json/issues"
Documentation = "https://github.com/ringsaturn/go-cities.json"
